Fixed ingredients background, aligned byline a bit

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ footer {
 
 .ingredients_box {
   background-image: url(images/list-bg.png);
-  width: 80%;
+  background-position: center bottom;
   padding: 20px 50px 20px 20px;
   align-content: flex-start;
 }
@@ -74,15 +74,16 @@ footer {
 }
 
 .byline {
-
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .button {
   background-color: rgb(188, 122, 88);;
   border: none;
   text-align: center;
-  height: 71px;
-  width: 142px;
+  height: 40px;
+  width: 125px;
 }
 
 .footerhr {
